Zero builds fails after JDK-6898462

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b45

        Zero uses the C++ Interpreter which does not define Interpreter::remove_activation_entry() and, thus, fails to compile with:
         
        hotspot/src/share/vm/interpreter/interpreterRuntime.cpp: In static member function ‘static unsigned char* InterpreterRuntime::exception_handler_for_exception(JavaThread*, oopDesc*)’:
        hotspot/src/share/vm/interpreter/interpreterRuntime.cpp:397:12: error: ‘remove_activation_entry’ is not a member of ‘Interpreter’
         
        See also:
        http://builder.classpath.org/jenkins/job/OpenJDK9_hscomp_Zero/88/consoleFull

              Assignee:
              Severin Gehwolf
              Reporter:
              Omair Majid
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: