8067231: Zero builds fails after JDK-6898462

Interpreter::remove_activation_entry() is not defined for the C++ interpreter

Reviewed-by: roland, coleenp